[package]
name = "vector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = [
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
]
description = "The package provides a vector database."
documentation = "https://docs.rs/vector"
homepage = "https://github.com/stainless-steel/vector"
repository = "https://github.com/stainless-steel/vector"
readme = "README.md"
categories = ["database"]
keywords = ["database"]
