[package]
name = "vector"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = [
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Navya Mehta <navya.mehta@gmail.com>",
    "Nikhil Garg <nikhilgarg28@gmail.com>",
]
description = "The package provides a vector database allowing for efficient search of nearest neighbors."
documentation = "https://docs.rs/vector"
homepage = "https://github.com/stainless-steel/vector"
repository = "https://github.com/stainless-steel/vector"
readme = "README.md"
categories = ["data-structures", "database-implementations", "mathematics"]
keywords = ["database", "machine-learning", "vector-search"]

[dependencies]
random = "0.14"

[dev-dependencies]
assert = "0.7"
